// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Review /> if \`props.isShowingPlaceholder\` should render the right structure 1`] = `
<Review
  isShowingPlaceholder={true}
  ratingNumber={4}
  reviewResponse={null}
  reviewText="someText"
  reviewTitle="someTitle"
  reviewerCategory="someCategory"
  reviewerLocation="someLocation"
  reviewerName="someName"
  reviewerStayDate="someDate"
>
  <Card
    fluid={true}
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
    >
      <CardContent>
        <div
          className="content"
        >
          <CardMeta>
            <div
              className="meta"
            >
              <Grid
                areColumnsCentered={false}
                isStackable={false}
              >
                <Grid
                  centered={false}
                  stackable={false}
                >
                  <div
                    className="ui grid"
                  >
                    <GridRow
                      horizontalAlignContent="left"
                      verticalAlign="middle"
                    >
                      <GridRow
                        textAlign="left"
                        verticalAlign="middle"
                      >
                        <div
                          className="left aligned middle aligned row"
                        >
                          <GridColumn
                            computer={6}
                            mobile={12}
                            tablet={7}
                            verticalAlignContent="top"
                            width={null}
                          >
                            <GridColumn
                              computer={6}
                              mobile={12}
                              tablet={7}
                              verticalAlign="top"
                              width={null}
                            >
                              <div
                                className="top aligned six wide computer twelve wide mobile seven wide tablet column"
                              >
                                <TextPlaceholder
                                  isFluid={true}
                                  length="medium"
                                >
                                  <div
                                    className="placeholder text medium fluid"
                                  />
                                </TextPlaceholder>
                              </div>
                            </GridColumn>
                          </GridColumn>
                          <GridColumn
                            computer={6}
                            mobile={12}
                            tablet={5}
                            textAlign="right"
                            verticalAlign="middle"
                            verticalAlignContent="top"
                            width={null}
                          >
                            <GridColumn
                              computer={6}
                              mobile={12}
                              tablet={5}
                              textAlign="right"
                              verticalAlign="top"
                              width={null}
                            >
                              <div
                                className="right aligned top aligned six wide computer twelve wide mobile five wide tablet column"
                              />
                            </GridColumn>
                          </GridColumn>
                        </div>
                      </GridRow>
                    </GridRow>
                  </div>
                </Grid>
              </Grid>
            </div>
          </CardMeta>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <TextPlaceholder
            isFluid={true}
            length="medium"
          >
            <div
              className="placeholder text medium fluid"
            />
          </TextPlaceholder>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <TextPlaceholder
            isFluid={true}
            length="full"
          >
            <div
              className="placeholder text full fluid"
            />
          </TextPlaceholder>
          <TextPlaceholder
            isFluid={true}
            length="full"
          >
            <div
              className="placeholder text full fluid"
            />
          </TextPlaceholder>
          <TextPlaceholder
            isFluid={true}
            length="short"
          >
            <div
              className="placeholder text short fluid"
            />
          </TextPlaceholder>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <CardDescription
            textAlign="right"
          >
            <div
              className="right aligned description"
            />
          </CardDescription>
        </div>
      </CardContent>
    </div>
  </Card>
</Review>
`;

exports[`<Review /> if \`props.reviewResponse\` is passed should render the right structure 1`] = `
<Review
  isShowingPlaceholder={false}
  ratingNumber={4}
  reviewResponse={
    Object {
      "dateTime": "someDate",
      "source": "someSource",
      "text": "someOtherText",
    }
  }
  reviewText="someText"
  reviewTitle="someTitle"
  reviewerCategory="someCategory"
  reviewerLocation="someLocation"
  reviewerName="someName"
  reviewerStayDate="someDate"
>
  <Card
    fluid={true}
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
    >
      <CardContent>
        <div
          className="content"
        >
          <CardMeta>
            <div
              className="meta"
            >
              <Grid
                areColumnsCentered={false}
                isStackable={false}
              >
                <Grid
                  centered={false}
                  stackable={false}
                >
                  <div
                    className="ui grid"
                  >
                    <GridRow
                      horizontalAlignContent="left"
                      verticalAlign="middle"
                    >
                      <GridRow
                        textAlign="left"
                        verticalAlign="middle"
                      >
                        <div
                          className="left aligned middle aligned row"
                        >
                          <GridColumn
                            computer={6}
                            mobile={12}
                            tablet={7}
                            verticalAlignContent="top"
                            width={null}
                          >
                            <GridColumn
                              computer={6}
                              mobile={12}
                              tablet={7}
                              verticalAlign="top"
                              width={null}
                            >
                              <div
                                className="top aligned six wide computer twelve wide mobile seven wide tablet column"
                              >
                                <Subheading>
                                  <span
                                    className="ui sub header"
                                  >
                                    someName (someLocation)
                                  </span>
                                </Subheading>
                              </div>
                            </GridColumn>
                          </GridColumn>
                          <GridColumn
                            computer={6}
                            mobile={12}
                            tablet={5}
                            textAlign="right"
                            verticalAlign="middle"
                            verticalAlignContent="top"
                            width={null}
                          >
                            <GridColumn
                              computer={6}
                              mobile={12}
                              tablet={5}
                              textAlign="right"
                              verticalAlign="top"
                              width={null}
                            >
                              <div
                                className="right aligned top aligned six wide computer twelve wide mobile five wide tablet column"
                              >
                                <Rating
                                  iconSize="small"
                                  isShowingNumeral={false}
                                  ratingNumber={4}
                                >
                                  <Rating
                                    clearable="auto"
                                    disabled={true}
                                    maxRating={5}
                                    rating={4}
                                    size="small"
                                  >
                                    <div
                                      className="ui small disabled rating"
                                      onMouseLeave={[Function]}
                                      role="radiogroup"
                                    >
                                      <RatingIcon
                                        active={true}
                                        aria-checked={false}
                                        aria-posinset={1}
                                        aria-setsize={5}
                                        as="i"
                                        index={0}
                                        key="0"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={1}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={true}
                                        aria-checked={false}
                                        aria-posinset={2}
                                        aria-setsize={5}
                                        as="i"
                                        index={1}
                                        key="1"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={2}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={true}
                                        aria-checked={false}
                                        aria-posinset={3}
                                        aria-setsize={5}
                                        as="i"
                                        index={2}
                                        key="2"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={3}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={true}
                                        aria-checked={true}
                                        aria-posinset={4}
                                        aria-setsize={5}
                                        as="i"
                                        index={3}
                                        key="3"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={true}
                                          aria-posinset={4}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={false}
                                        aria-checked={false}
                                        aria-posinset={5}
                                        aria-setsize={5}
                                        as="i"
                                        index={4}
                                        key="4"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={5}
                                          aria-setsize={5}
                                          className="icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                    </div>
                                  </Rating>
                                </Rating>
                              </div>
                            </GridColumn>
                          </GridColumn>
                        </div>
                      </GridRow>
                    </GridRow>
                  </div>
                </Grid>
              </Grid>
            </div>
          </CardMeta>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <CardHeader>
            <div
              className="header"
            >
              someTitle
            </div>
          </CardHeader>
          <CardDescription>
            <div
              className="description"
            >
              <Paragraph
                size="medium"
                weight={null}
              >
                <p
                  className=""
                >
                  someText
                </p>
              </Paragraph>
            </div>
          </CardDescription>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <div>
            <Quote
              quoteDateTime="someDate"
              quoteSource="someSource"
              quoteText="someOtherText"
            >
              <blockquote
                className="ui quote"
              >
                <Grid
                  areColumnsCentered={false}
                  isStackable={false}
                >
                  <Grid
                    centered={false}
                    stackable={false}
                  >
                    <div
                      className="ui grid"
                    >
                      <GridRow
                        horizontalAlignContent="left"
                      >
                        <GridRow
                          textAlign="left"
                        >
                          <div
                            className="left aligned row"
                          >
                            <GridColumn
                              verticalAlignContent="top"
                              width={12}
                            >
                              <GridColumn
                                verticalAlign="top"
                                width={12}
                              >
                                <div
                                  className="top aligned twelve wide column"
                                >
                                  <Paragraph
                                    size="medium"
                                    weight={null}
                                  >
                                    <p
                                      className=""
                                    >
                                      someOtherText
                                    </p>
                                  </Paragraph>
                                </div>
                              </GridColumn>
                            </GridColumn>
                          </div>
                        </GridRow>
                      </GridRow>
                      <GridRow
                        horizontalAlignContent="right"
                      >
                        <GridRow
                          textAlign="right"
                        >
                          <div
                            className="right aligned row"
                          >
                            <GridColumn
                              verticalAlignContent="top"
                              width={12}
                            >
                              <GridColumn
                                verticalAlign="top"
                                width={12}
                              >
                                <div
                                  className="top aligned twelve wide column"
                                >
                                  <Paragraph
                                    size="tiny"
                                    weight={null}
                                  >
                                    <p
                                      className="tiny"
                                    >
                                      someSource (someDate)
                                    </p>
                                  </Paragraph>
                                </div>
                              </GridColumn>
                            </GridColumn>
                          </div>
                        </GridRow>
                      </GridRow>
                    </div>
                  </Grid>
                </Grid>
              </blockquote>
            </Quote>
            <Divider
              className=""
              hasLine={false}
              size="medium"
            >
              <Divider
                className=""
                hidden={true}
                section={false}
              >
                <div
                  className="ui hidden divider"
                />
              </Divider>
            </Divider>
          </div>
          <CardDescription
            textAlign="right"
          >
            <div
              className="right aligned description"
            >
              someCategory | stayed in someDate
            </div>
          </CardDescription>
        </div>
      </CardContent>
    </div>
  </Card>
</Review>
`;

exports[`<Review /> should render the right structure 1`] = `
<Review
  isShowingPlaceholder={false}
  ratingNumber={4}
  reviewResponse={null}
  reviewText="someText"
  reviewTitle="someTitle"
  reviewerCategory="someCategory"
  reviewerLocation="someLocation"
  reviewerName="someName"
  reviewerStayDate="someDate"
>
  <Card
    fluid={true}
  >
    <div
      className="ui fluid card"
      onClick={[Function]}
    >
      <CardContent>
        <div
          className="content"
        >
          <CardMeta>
            <div
              className="meta"
            >
              <Grid
                areColumnsCentered={false}
                isStackable={false}
              >
                <Grid
                  centered={false}
                  stackable={false}
                >
                  <div
                    className="ui grid"
                  >
                    <GridRow
                      horizontalAlignContent="left"
                      verticalAlign="middle"
                    >
                      <GridRow
                        textAlign="left"
                        verticalAlign="middle"
                      >
                        <div
                          className="left aligned middle aligned row"
                        >
                          <GridColumn
                            computer={6}
                            mobile={12}
                            tablet={7}
                            verticalAlignContent="top"
                            width={null}
                          >
                            <GridColumn
                              computer={6}
                              mobile={12}
                              tablet={7}
                              verticalAlign="top"
                              width={null}
                            >
                              <div
                                className="top aligned six wide computer twelve wide mobile seven wide tablet column"
                              >
                                <Subheading>
                                  <span
                                    className="ui sub header"
                                  >
                                    someName (someLocation)
                                  </span>
                                </Subheading>
                              </div>
                            </GridColumn>
                          </GridColumn>
                          <GridColumn
                            computer={6}
                            mobile={12}
                            tablet={5}
                            textAlign="right"
                            verticalAlign="middle"
                            verticalAlignContent="top"
                            width={null}
                          >
                            <GridColumn
                              computer={6}
                              mobile={12}
                              tablet={5}
                              textAlign="right"
                              verticalAlign="top"
                              width={null}
                            >
                              <div
                                className="right aligned top aligned six wide computer twelve wide mobile five wide tablet column"
                              >
                                <Rating
                                  iconSize="small"
                                  isShowingNumeral={false}
                                  ratingNumber={4}
                                >
                                  <Rating
                                    clearable="auto"
                                    disabled={true}
                                    maxRating={5}
                                    rating={4}
                                    size="small"
                                  >
                                    <div
                                      className="ui small disabled rating"
                                      onMouseLeave={[Function]}
                                      role="radiogroup"
                                    >
                                      <RatingIcon
                                        active={true}
                                        aria-checked={false}
                                        aria-posinset={1}
                                        aria-setsize={5}
                                        as="i"
                                        index={0}
                                        key="0"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={1}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={true}
                                        aria-checked={false}
                                        aria-posinset={2}
                                        aria-setsize={5}
                                        as="i"
                                        index={1}
                                        key="1"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={2}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={true}
                                        aria-checked={false}
                                        aria-posinset={3}
                                        aria-setsize={5}
                                        as="i"
                                        index={2}
                                        key="2"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={3}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={true}
                                        aria-checked={true}
                                        aria-posinset={4}
                                        aria-setsize={5}
                                        as="i"
                                        index={3}
                                        key="3"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={true}
                                          aria-posinset={4}
                                          aria-setsize={5}
                                          className="active icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                      <RatingIcon
                                        active={false}
                                        aria-checked={false}
                                        aria-posinset={5}
                                        aria-setsize={5}
                                        as="i"
                                        index={4}
                                        key="4"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        selected={false}
                                      >
                                        <i
                                          aria-checked={false}
                                          aria-posinset={5}
                                          aria-setsize={5}
                                          className="icon"
                                          onClick={[Function]}
                                          onKeyUp={[Function]}
                                          onMouseEnter={[Function]}
                                          role="radio"
                                          tabIndex={0}
                                        />
                                      </RatingIcon>
                                    </div>
                                  </Rating>
                                </Rating>
                              </div>
                            </GridColumn>
                          </GridColumn>
                        </div>
                      </GridRow>
                    </GridRow>
                  </div>
                </Grid>
              </Grid>
            </div>
          </CardMeta>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <CardHeader>
            <div
              className="header"
            >
              someTitle
            </div>
          </CardHeader>
          <CardDescription>
            <div
              className="description"
            >
              <Paragraph
                size="medium"
                weight={null}
              >
                <p
                  className=""
                >
                  someText
                </p>
              </Paragraph>
            </div>
          </CardDescription>
          <Divider
            className=""
            hasLine={false}
            size="medium"
          >
            <Divider
              className=""
              hidden={true}
              section={false}
            >
              <div
                className="ui hidden divider"
              />
            </Divider>
          </Divider>
          <CardDescription
            textAlign="right"
          >
            <div
              className="right aligned description"
            >
              someCategory | stayed in someDate
            </div>
          </CardDescription>
        </div>
      </CardContent>
    </div>
  </Card>
</Review>
`;
